# rust-gpu-shaders

./: Cargo.toml  README.md  flake.nix  rust-toolchain.toml
runner/: Cargo.toml  build.rs
runner/builder/: Cargo.toml
runner/builder/src/: main.rs
runner/src/: app.rs  camera.rs  context.rs  controller.rs  egui_components.rs  fps_counter.rs  graphics.rs  lib.rs  model.rs  render_pass.rs  sdfs_2d.rs  shader.rs  shaders.rs  state.rs  ui.rs  window.rs
runner/src/egui_components/: enabled_number.rs  repetition.rs
runner/src/shaders/: fun_rep_demo.rs  hydrogen_wavefunction.rs  koch_snowflake.rs  mandelbrot.rs  ray_marching.rs  ray_marching_2d.rs  sdf.scm  sdfs_2d.rs  sdfs_3d.rs  sdfs_pixel_grid.rs  sierpinski_triangle.rs  spherical_harmonics.rs  spherical_harmonics_shape.rs
shaders/fun-rep-demo/: Cargo.toml
shaders/fun-rep-demo/src/: lib.rs
shaders/gaussian/: Cargo.toml
shaders/gaussian/src/: lib.rs
shaders/hydrogen-wavefunction/: Cargo.toml
shaders/hydrogen-wavefunction/src/: lib.rs
shaders/koch-snowflake/: Cargo.toml
shaders/koch-snowflake/src/: lib.rs
shaders/mandelbrot/: Cargo.toml
shaders/mandelbrot/src/: lib.rs
shaders/ray-marching/: Cargo.toml
shaders/ray-marching-2d/: Cargo.toml
shaders/ray-marching-2d/src/: lib.rs  operator.rs  sdf.rs
shaders/ray-marching/src/: distance_estimate.rs  lib.rs  operator.rs  sdf.rs
shaders/ray-marching/src/shape/: plane.rs  shape.rs  sphere.rs
shaders/sdfs-2d/: Cargo.toml
shaders/sdfs-2d/src/: epga2d.rs  lib.rs  parametric_sdf.rs
shaders/sdfs-3d/: Cargo.toml
shaders/sdfs-3d/src/: lib.rs
shaders/sdfs-pixel-grid/: Cargo.toml
shaders/sdfs-pixel-grid/src/: lib.rs
shaders/shared/: Cargo.toml
shaders/shared/src/: assert.rs  complex.rs  fast_optional.rs  interpreter.rs  lib.rs  numeric_integration.rs  push_constants.rs  random.rs  ray_intersection.rs  sdf_2d.rs  sdf_3d.rs  spherical_harmonics.rs  tuple.rs  vec_functional.rs  voronoi.rs
shaders/shared/src/functional/: mod.rs  traits.rs  tuple.rs  vec.rs
shaders/shared/src/push_constants/: fun_rep_demo.rs  hydrogen_wavefunction.rs  koch_snowflake.rs  mandelbrot.rs  ray_marching.rs  ray_marching_2d.rs  sdfs_2d.rs  sdfs_3d.rs  sdfs_pixel_grid.rs  sierpinski_triangle.rs  spherical_harmonics.rs  spherical_harmonics_shape.rs
shaders/shared/src/sdf_2d/: grid.rs  ops.rs  specialization.rs
shaders/shared/src/sdf_2d/ops/: fast_repeat.rs  repeat.rs
shaders/shared/src/sdf_3d/: ops.rs  specialization.rs
shaders/shared/src/sdf_3d/ops/: fast_repeat.rs  mod.rs  repeat.rs
shaders/sierpinski-triangle/: Cargo.toml
shaders/sierpinski-triangle/src/: lib.rs
shaders/simplest-shader/: Cargo.toml
shaders/simplest-shader/src/: lib.rs
shaders/spherical-harmonics/: Cargo.toml
shaders/spherical-harmonics-shape/: Cargo.toml
shaders/spherical-harmonics-shape/src/: lib.rs
shaders/spherical-harmonics/src/: lib.rs
