[workspace]
resolver = "2"
members = [
    "runner",
    "runner/builder",
    "shaders/mandelbrot",
    "shaders/ray-marching",
    "shaders/ray-marching-2d",
    "shaders/koch-snowflake",
]
default-members = [
    "runner",
]

[workspace.package]
version = "0.1.0"
authors = ["Abel <abel465@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
spirv-std = { path = "../rust-gpu/crates/spirv-std", version = "=0.9.0" }
spirv-builder = { path = "../rust-gpu/crates/spirv-builder", version = "=0.9.0", default-features = false  }
