[workspace]
resolver = "2"
members = [
  "runner",
  "runner/builder",
  "shaders/mandelbrot",
  "shaders/ray-marching",
  "shaders/ray-marching-2d",
  "shaders/koch-snowflake",
  "shaders/sierpinski-triangle",
  "shaders/sdfs-2d",
  "shaders/sdfs-3d",
  "shaders/hydrogen-wavefunction",
  "shaders/spherical-harmonics",
  "shaders/gaussian",
]
default-members = ["runner"]

[workspace.package]
version = "0.1.0"
authors = ["Abel <abel465@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
geometric_algebra = { path = "../geometric_algebra" }

[workspace.dependencies.spirv-std]
git = "https://github.com/EmbarkStudios/rust-gpu"
rev = "d0e374968a37d8a37c4f3509cd10719d384470f6"

[workspace.dependencies.spirv-builder]
git = "https://github.com/EmbarkStudios/rust-gpu"
rev = "d0e374968a37d8a37c4f3509cd10719d384470f6"
default-features = false

[profile.dev]
package.spirv-tools-sys.opt-level = 1
