[package]
name = "shared"
version = "0.0.0"
publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
spirv-std = { workspace = true }
bytemuck = { version = "1.6.3", features = ["derive"] }
tuple = { version = "0.5.1", default-features = false }

[target.'cfg(not(any(target_arch = "spirv")))'.dependencies]
strum = "0.25.0"
winit = { version = "0.28.3" }
